; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/net/extr_adm5120sw.c_adm5120_switch_set_vlan_mac.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/net/extr_adm5120sw.c_adm5120_switch_set_vlan_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAC_WT1_MAC3_SHIFT = common dso_local global i8 0, align 1
@MAC_WT1_MAC4_SHIFT = common dso_local global i8 0, align 1
@MAC_WT1_MAC5_SHIFT = common dso_local global i8 0, align 1
@SWITCH_REG_MAC_WT1 = common dso_local global i32 0, align 4
@MAC_WT0_MAC0_SHIFT = common dso_local global i8 0, align 1
@MAC_WT0_MAC1_SHIFT = common dso_local global i8 0, align 1
@MAC_WT0_MAWC = common dso_local global i8 0, align 1
@MAC_WT0_WVE = common dso_local global i8 0, align 1
@MAC_WT0_WVN_SHIFT = common dso_local global i32 0, align 4
@MAC_WT0_WAF_STATIC = common dso_local global i8 0, align 1
@MAC_WT0_WAF_SHIFT = common dso_local global i8 0, align 1
@SWITCH_REG_MAC_WT0 = common dso_local global i32 0, align 4
@MAC_WT0_MWD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @adm5120_switch_set_vlan_mac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adm5120_switch_set_vlan_mac(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 2
  %8 = load i8, i8* %7, align 1
  %9 = zext i8 %8 to i32
  %10 = load i8*, i8** %4, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 3
  %12 = load i8, i8* %11, align 1
  %13 = zext i8 %12 to i32
  %14 = load i8, i8* @MAC_WT1_MAC3_SHIFT, align 1
  %15 = zext i8 %14 to i32
  %16 = shl i32 %13, %15
  %17 = or i32 %9, %16
  %18 = load i8*, i8** %4, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 4
  %20 = load i8, i8* %19, align 1
  %21 = zext i8 %20 to i32
  %22 = load i8, i8* @MAC_WT1_MAC4_SHIFT, align 1
  %23 = zext i8 %22 to i32
  %24 = shl i32 %21, %23
  %25 = or i32 %17, %24
  %26 = load i8*, i8** %4, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 5
  %28 = load i8, i8* %27, align 1
  %29 = zext i8 %28 to i32
  %30 = load i8, i8* @MAC_WT1_MAC5_SHIFT, align 1
  %31 = zext i8 %30 to i32
  %32 = shl i32 %29, %31
  %33 = or i32 %25, %32
  store i32 %33, i32* %5, align 4
  %34 = load i32, i32* @SWITCH_REG_MAC_WT1, align 4
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @sw_write_reg(i32 %34, i32 %35)
  %37 = load i8*, i8** %4, align 8
  %38 = getelementptr inbounds i8, i8* %37, i64 0
  %39 = load i8, i8* %38, align 1
  %40 = zext i8 %39 to i32
  %41 = load i8, i8* @MAC_WT0_MAC0_SHIFT, align 1
  %42 = zext i8 %41 to i32
  %43 = shl i32 %40, %42
  %44 = load i8*, i8** %4, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 1
  %46 = load i8, i8* %45, align 1
  %47 = zext i8 %46 to i32
  %48 = load i8, i8* @MAC_WT0_MAC1_SHIFT, align 1
  %49 = zext i8 %48 to i32
  %50 = shl i32 %47, %49
  %51 = or i32 %43, %50
  %52 = load i8, i8* @MAC_WT0_MAWC, align 1
  %53 = zext i8 %52 to i32
  %54 = or i32 %51, %53
  %55 = load i8, i8* @MAC_WT0_WVE, align 1
  %56 = zext i8 %55 to i32
  %57 = or i32 %54, %56
  %58 = load i32, i32* %3, align 4
  %59 = load i32, i32* @MAC_WT0_WVN_SHIFT, align 4
  %60 = shl i32 %58, %59
  %61 = or i32 %57, %60
  %62 = load i8, i8* @MAC_WT0_WAF_STATIC, align 1
  %63 = zext i8 %62 to i32
  %64 = load i8, i8* @MAC_WT0_WAF_SHIFT, align 1
  %65 = zext i8 %64 to i32
  %66 = shl i32 %63, %65
  %67 = or i32 %61, %66
  store i32 %67, i32* %5, align 4
  %68 = load i32, i32* @SWITCH_REG_MAC_WT0, align 4
  %69 = load i32, i32* %5, align 4
  %70 = call i32 @sw_write_reg(i32 %68, i32 %69)
  br label %71

71:                                               ; preds = %74, %2
  %72 = load i32, i32* @SWITCH_REG_MAC_WT0, align 4
  %73 = call i32 @sw_read_reg(i32 %72)
  store i32 %73, i32* %5, align 4
  br label %74

74:                                               ; preds = %71
  %75 = load i32, i32* %5, align 4
  %76 = load i32, i32* @MAC_WT0_MWD, align 4
  %77 = and i32 %75, %76
  %78 = icmp eq i32 %77, 0
  br i1 %78, label %71, label %79

79:                                               ; preds = %74
  ret void
}

declare dso_local i32 @sw_write_reg(i32, i32) #1

declare dso_local i32 @sw_read_reg(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
